--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,14 +14,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js 16
-        uses: actions/setup-node@v2
-        with:
-          node-version: 16
-          cache: 'npm'
-      - run: npm ci
-      - run: npm run build
-      - run: npx semantic-release
-      - env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+      - run: echo 1
+#       - uses: actions/checkout@v2
+#       - name: Use Node.js 16
+#         uses: actions/setup-node@v2
+#         with:
+#           node-version: 16
+#           cache: 'npm'
+#       - run: npm ci
+#       - run: npm run build
+#       - run: npx semantic-release
+#       - env:
+#           GH_TOKEN: ${{ secrets.GH_TOKEN }}
