--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,16 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# dependencies
-node_modules
-.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
+# Mac
 .DS_Store
+
+# env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# npm
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+node_modules
