--- a/electron/package.json
+++ b/electron/package.json
@@ -16,7 +16,11 @@
     "@semantic-release/git": "^10.0.1",
     "@semantic-release/github": "^8.0.2",
     "@semantic-release/release-notes-generator": "^10.0.3",
+    "@types/glob": "^7.2.0",
     "electron": "^17.0.1",
     "semantic-release": "^19.0.2"
+  },
+  "dependencies": {
+    "glob": "^7.2.0"
   }
 }
