--- a/app/package.json
+++ b/app/package.json
@@ -23,6 +23,7 @@
     "@types/node": "^16.11.25",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "classnames": "^2.3.1",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "react": "^17.0.2",
