--- a/app/package.json
+++ b/app/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
     "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
     "react": "^17.0.2",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.179",
     "cross-env": "^7.0.3",
     "electron": "^17.0.1",
     "less": "^4.1.2",
