--- a/electron/package.json
+++ b/electron/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "npm start",
+    "dev": "run-p start tsc",
     "start": "electron .",
+    "tsc": "tsc -w",
     "build": "echo \"build electron\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -18,12 +19,15 @@
     "@semantic-release/github": "^8.0.2",
     "@semantic-release/release-notes-generator": "^10.0.3",
     "@types/glob": "^7.2.0",
+    "@types/lodash": "^4.14.179",
     "@types/xml2js": "^0.4.9",
     "electron": "^17.0.1",
+    "npm-run-all": "^4.1.5",
     "semantic-release": "^19.0.2"
   },
   "dependencies": {
     "glob": "^7.2.0",
+    "lodash": "^4.17.21",
     "xml2js": "^0.4.23"
   }
 }
