--- a/electron/package.json
+++ b/electron/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "dev": "run-p dev:*",
+    "dev": "npm-run-all -l clean build -p dev:*",
     "dev:electron": "electron .",
     "dev:rollup": "rollup -w -c rollup.config.js",
+    "clean": "rimraf dist",
     "build": "echo \"build electron\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -28,6 +29,8 @@
     "@types/xml2js": "^0.4.9",
     "electron": "^17.0.1",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.70.0",
     "semantic-release": "^19.0.2"
   },
   "dependencies": {
