--- a/electron/package.json
+++ b/electron/package.json
@@ -31,7 +31,8 @@
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "rollup": "^2.70.0",
-    "semantic-release": "^19.0.2"
+    "semantic-release": "^19.0.2",
+    "type-fest": "^2.12.0"
   },
   "dependencies": {
     "glob": "^7.2.0",
