--- a/app/package.json
+++ b/app/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "run-p start tcm",
-    "start": "cross-env PORT=9000 react-scripts start",
-    "tcm": "tcm src -w -p '**/*.module.css'",
+    "dev": "run-p dev:*",
+    "dev:react": "cross-env PORT=9000 react-scripts start",
+    "dev:tcm": "tcm src -w -p '**/*.module.css'",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
