--- a/app/package.json
+++ b/app/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "run-p dev:*",
-    "dev:react": "cross-env PORT=9000 react-scripts start",
+    "dev": "npm-run-all -l -p dev:*",
+    "dev:react": "cross-env BROWSER=none PORT=9000 react-scripts start",
     "dev:tcm": "tcm src -w -p '**/*.module.css'",
     "build": "react-scripts build",
     "test": "react-scripts test",
