--- a/electron/package.json
+++ b/electron/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "dev": "npm-run-all -l clean build:rollup -p dev:*",
-    "dev:electron": "electron .",
+    "dev:electron": "cross-env ELECTRON_DISABLE_SECURITY_WARNINGS=false electron .",
     "dev:rollup": "rollup -w -c rollup.config.js",
     "clean": "rimraf dist",
     "build:rollup": "rollup -c rollup.config.js",
@@ -27,6 +27,7 @@
     "@types/glob": "^7.2.0",
     "@types/lodash": "^4.14.179",
     "@types/xml2js": "^0.4.9",
+    "cross-env": "^7.0.3",
     "electron": "^17.0.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
