--- a/electron/package.json
+++ b/electron/package.json
@@ -2,13 +2,16 @@
   "name": "app-launcher",
   "version": "1.0.0",
   "description": "",
-  "main": "main.js",
+  "main": "dist/main.js",
   "scripts": {
-    "dev": "npm-run-all -l clean build:rollup -p dev:*",
-    "dev:electron": "cross-env ELECTRON_DISABLE_SECURITY_WARNINGS=false electron .",
-    "dev:rollup": "rollup -w -c rollup.config.js",
+    "dev": "npm-run-all -l clean build:main build:preload -p dev:*",
+    "dev:main": "rollup -w -c rollup.main.config.js",
+    "dev:preload": "rollup -w -c rollup.preload.config.js",
+    "dev:electron": "cross-env ELECTRON_DISABLE_SECURITY_WARNINGS=true electron .",
+    "build:main": "rollup -c rollup.main.config.js",
+    "build:preload": "rollup -c rollup.preload.config.js",
+    "build:electron": "echo \"build electron\"",
     "clean": "rimraf dist",
-    "build:rollup": "rollup -c rollup.config.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "lianer",
