--- a/app/package.json
+++ b/app/package.json
@@ -27,6 +27,7 @@
     "lodash": "^4.17.21",
     "mobx": "^6.4.2",
     "mobx-react": "^7.3.0",
+    "mobx-utils": "^6.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
